--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^6.3.0",
     "eslint-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "json-server": "^0.15.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "raw-loader": "^3.1.0",
