--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.2"
   }
 }
